Fix spacing around `<hr>` tags
`<hr>` tags didn't have any bottom margin, so paragraphs underneath them
were pressed right against the line. This adds space equal to the
margins under paragraphs for better spacing.

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -3,7 +3,7 @@ html {
 }
 hr {
     width: 25%;
-    margin: auto;
+    margin: auto auto 1rem;
 }
 
 blockquote {
